Update base docker image for rpi

--- a/ml_api/Dockerfile
+++ b/ml_api/Dockerfile
@@ -1,10 +1,11 @@
-FROM yaphets1/ml_api_base
+FROM yaphets1/ml_api_base:latest
 WORKDIR /app
 EXPOSE 3333
 
 ADD . /app
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+RUN pip3 install --upgrade pip
+RUN pip3 install -r requirements.txt
+RUN pip3 install --upgrade "sentry-sdk[flask]"
 
 RUN echo 'Downloading the latest failure detection AI model in Darknet format...'
 RUN wget -O model/model-weights.darknet $(cat model/model-weights.darknet.url | tr -d '\r')
