--- a/ml_api/Dockerfile.base_rpi
+++ b/ml_api/Dockerfile.base_rpi
@@ -24,10 +24,10 @@ RUN git clone https://github.com/AlexeyAB/darknet.git && cd darknet
 RUN cd darknet \
     && git checkout . && git pull \
     && sed -i 's/OPENCV=0/OPENCV=1/' Makefile \
-    && make -j 4
+    && sed -i 's/LIBSO=0/LIBSO=1/' Makefile \
+    && make -j 4 && mv libdarknet.so libdarknet_cpu.so
 
 RUN pip3 install --upgrade pip
-# RUN pip3 install --prefer-binary opencv_python_headless==4.8.0.74
 RUN pip3 install opencv-python-headless==4.5.5.64
 # Install ONNX and ONNX Runtime with OpenCL support
 # RUN pip3 install onnx onnxruntime-opencl
